Barra Superior PARTE 1

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,9 +2,26 @@
 
 
 * {
+    box-sizing: border-box;
     font-family: 'Open Sans' sans-serif;
 }
 
-h1 {
-    color: red;
+html, body {
+    background-color: #E8E8E8;
+}
+
+header {
+    background-color: #4D41C0;
+    color: #FFF ;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+a, a:hover {
+    text-decoration: none;
+    color: unset;
 }
