--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,6 +3,7 @@
 
 :root {
     --bg-gray: #E8E8E8;
+    --text-gray: #4A4A4A;
     --color-primary: #4D41C0;
     --white: #FFF
 }
@@ -57,5 +58,46 @@ a, a:hover {
 }
 
 .dsmovie-contact-container img {
-    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#dsmovie-card-list {
+    padding: 40px 0;
+}
+
+.dsmovie-card {
+    width: 360px;
+}
+
+.dsmovie-card img{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description {
+    background-color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0 20px 0;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.dsmovie-btn, .dsmovie-btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
