--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,6 +71,7 @@ a, a:hover {
 
 .dsmovie-card img{
     width: 100%;
+    height: 250px;
     border-radius: 8px 8px 0 0;
 }
 
@@ -79,14 +80,17 @@ a, a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 0 20px 0;
+    justify-content: space-between;
+    padding: 10px 20px 20px 20px;
     border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 
 .dsmovie-card-description h3 {
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
