--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,6 +67,7 @@ a, a:hover {
 
 .dsmovie-card {
     width: 100%;
+    padding-bottom: 20px;
 }
 
 .dsmovie-card img{
@@ -104,4 +105,9 @@ a, a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+}
+
+.dsmovie-form-container {
+    padding: 40px 0;
+    max-width: 480px;
 }
