--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,7 +5,8 @@
     --bg-gray: #E8E8E8;
     --text-gray: #4A4A4A;
     --color-primary: #4D41C0;
-    --white: #FFF
+    --white: #FFF;
+    --text-light-gray: #AAA;
 }
 
 * {
@@ -105,9 +106,47 @@ a, a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    border: 0;
 }
 
 .dsmovie-form-container {
     padding: 40px 0;
     max-width: 480px;
+}
+
+.dsmovie-form-description {
+    background-color: var(--white);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-form {
+    width: 100%;
+}
+
+.dsmovie-form-description h3 {
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.dsmovie-form-group {
+    margin-bottom: 20px;
+}
+
+.dsmovie-form-group label {
+    font-size: 12px;
+    color: var(--text-light-gray);
+}
+
+.dsmovie-form-btn-container {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
 }
