--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -110,6 +110,7 @@ a, a:hover {
 
 .dsmovie-card-description-bottom img {
     width: 22px;
+    height: 50px;
 }
 
 .dsmovie-card-description-bottom p {
